2022-09-14T00:32:19Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049333495
* notice: last 14d: unq all: 5 9
* notice: prev accum: outdated-unq outdated-all / unq all: 51 62 / 65 78
* notice: next accum: outdated-unq outdated-all / unq all: 57 69 / 65 78
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-30] / []

2022-09-13T08:09:35Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3043387171
* notice: last 14d: unq all: 9 16
* notice: prev accum: outdated-unq outdated-all / unq all: 51 62 / 64 77
* notice: next accum: outdated-unq outdated-all / unq all: 51 62 / 65 78
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2022-09-13]

2022-09-13T00:33:01Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3041538652
* notice: last 14d: unq all: 9 15
* notice: prev accum: outdated-unq outdated-all / unq all: 44 53 / 61 73
* notice: next accum: outdated-unq outdated-all / unq all: 51 62 / 64 77
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-29] / []

2022-09-12T16:08:25Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3038819450
* notice: last 14d: unq all: 10 20
* notice: prev accum: outdated-unq outdated-all / unq all: 44 53 / 64 77
* notice: next accum: outdated-unq outdated-all / unq all: 44 53 / 61 73
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -3 -4 / +7 +9 -3 -4 / 4 5
* notice: removed / changed dates: [] / [2022-08-29]

2022-09-11T08:00:29Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3031042832
* notice: last 14d: unq all: 13 24