@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-01T00:28:25Z",
-  "count" : 6,
-  "count_minmax" : [ 5, 6 ],
-  "count_decinc" : [ -0, +6 ],
-  "uniques" : 5,
-  "uniques_minmax" : [ 4, 5 ],
-  "uniques_decinc" : [ -0, +5 ]
+  "timestamp" : "2022-09-14T08:07:44Z",
+  "count" : 1,
+  "count_minmax" : [ 1, 6 ],
+  "count_decinc" : [ -5, +6 ],
+  "uniques" : 1,
+  "uniques_minmax" : [ 1, 5 ],
+  "uniques_decinc" : [ -4, +5 ]
 }
