@@ -1,16 +1,16 @@
 {
-  "timestamp" : "2022-09-14T00:32:19Z",
+  "timestamp" : "2022-09-14T08:07:44Z",
   "count_outdated" : 69,
   "uniques_outdated" : 57,
-  "count" : 78,
-  "uniques" : 65,
+  "count" : 74,
+  "uniques" : 62,
   "clones" : [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 6,
-      "count_minmax": [ 5, 6 ],
-      "uniques": 5,
-      "uniques_minmax": [ 4, 5 ]
+      "count": 1,
+      "count_minmax": [ 1, 6 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 5 ]
     },
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-14T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
