@@ -1,11 +1,11 @@
 {
-  "count": 9,
-  "uniques": 5,
+  "count": 5,
+  "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-08-31T00:00:00Z",
-      "count": 6,
-      "uniques": 5
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-04T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-09-13T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-14T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
