@@ -1,3 +1,11 @@
+2022-09-14T08:07:44Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3051155094
+* notice: last 14d: unq all: 2 5
+* notice: prev accum: outdated-unq outdated-all / unq all: 57 69 / 65 78
+* notice: next accum: outdated-unq outdated-all / unq all: 57 69 / 62 74
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -4 -5 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-08-31 2022-09-14]
+
 2022-09-14T00:32:19Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3049333495
 * notice: last 14d: unq all: 5 9
